src/test/julian/Parsing/SyntaxError/prog_2.jul
/* $PRAGMA$ info.julang.ide.no.parsing */
int x = 5;

void fun(){
	int y =;
}

fun();